--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,21 @@
 <h1>Hello World</h1>
 <p>See Me in views/static/index.html.erb</p>
+ <center>
+  <div class="container">
+  <img srcb.png">
+    <label><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="name" required>
+    <br />
+    <label><b>Password </b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+    <br />
+    <button type="submit">Login</button>
+    <input type="checkbox" checked="checked"> Remember me
+  </div>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <span class="psw">New to BongAlex Quora? 
+    <a href="signup.erb">Sign up</a></span>
+  </div>
+</form>
+</center>
