--- a/app/views/static/signup.erb
+++ b/app/views/static/signup.erb
@@ -1,25 +1,25 @@
-<center><div id="register" class="animate form">
-            <form  action="mysuperscript.php" autocomplete="on"> 
+<center><div>
+            <form  action="/signup" method="get"> 
                 <h1> Sign up </h1> 
                 <img src="d.jpg">
                 <p> 
                     <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-                    <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                    <input type="text" name="username" placeholder="mysuperusername690" />
                 </p>
                 <p> 
                     <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
+                    <input type="text" name="email" placeholder="mysupermail@mail.com"/> 
                 </p>
                 <p> 
                     <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    <input type="password" name="password" placeholder="eg. X8df!90EO"/>
                 </p>
                 <p> 
                     <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
-                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    <input type="password" name="password_comfirmation" placeholder="eg. X8df!90EO"/>
                 </p>
                 <p class="signin button"> 
-                    <input type="submit" value="Sign up"/> 
+                    <input type="submit" value="submit"/> 
                 </p>
                 <p class="change_link">  
                     Already a member ?
@@ -27,5 +27,5 @@
                 </p>
             </form>
         </div>
-        </center>
+ </center>
         
