--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,21 +1,26 @@
 <h1>Hello World</h1>
 <p>See Me in views/static/index.html.erb</p>
  <center>
+ <form action="/login" method="post">
   <div class="container">
-  <img srcb.png">
+  
+    <% if @error.exist? %>
+    <p><%= @error %></p>
+    <% end %> 
+ 
     <label><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="name" required>
     <br />
     <label><b>Password </b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="password" required>
     <br />
-    <button type="submit">Login</button>
+    <a href="/sessions/login"><button type="submit">Login</button></a>>
     <input type="checkbox" checked="checked"> Remember me
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
     <span class="psw">New to BongAlex Quora? 
-    <a href="signup.erb">Sign up</a></span>
+    <a href="/signup">Sign up</a></span>
   </div>
 </form>
 </center>
