updated login,error and questions

--- a/app/views/static/signup.erb
+++ b/app/views/static/signup.erb
@@ -7,6 +7,9 @@
                 <% if @error3 %>
                 <%= @error3 %>
                 <% end %>
+                <% if @error4 %>
+                <%= @error4 %>
+                <% end %>
 
             <form action="/signup" method="post"> 
                 <h1> Sign up </h1> 
