ver3.1 updated jsand imgs

--- a/app/views/questions/question2.erb
+++ b/app/views/questions/question2.erb
@@ -14,7 +14,14 @@
   </head>
 <body>    
 
-<%= @question.text %>
+        <div class="card w-75">
+            <div class="card-block">
+                <h3 class="card-title"><h2>Question:</h2><%= @question.text %></h3>
+                    <p class="card-text"><h2>Answer:</h2>Not me.<p>                           </p>
+                    <a href="#" class="btn btn-primary">Like?</a>
+            </div>
+        </div>
+
 
 
 
