--- a/app/views/static/homepage.erb
+++ b/app/views/static/homepage.erb
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="borderless currency">
+    <meta name="author" content="fintech company">
     <link rel="icon" href="../../favicon.ico">
 
     <title>MeLAB Not Your Ordinary Wallet</title>
@@ -50,7 +50,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="first-slide" src="img/woman-camera.jpg" alt="First slide">
+          <img class="first-slide" src="img/happy family.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Extra Ordinary Wallet</h1>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="img/money-blogging.jpg" alt="Second slide">
+          <img class="second-slide" src="img/finance2.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block">
               <h1>We take care your finance</h1>
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="third-slide" src="img/hearthand.jpg" alt="Third slide">
+          <img class="third-slide" src="img/loving<1>.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-right">
               <h1>We all have the heart</h1>
@@ -138,11 +138,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 push-md-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">The Best Of Both Worlds<span class="text-muted"></span></h2>
+          <p class="lead">MeLAB'ers have unique debit cards to withdraw cash and also do online transaction. Only with MeLAB,the more the better!</p>
         </div>
         <div class="col-md-5 pull-md-7">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid mx-auto" src="img/creditcard.jpg" alt="Withdrawal and payment options">
         </div>
       </div>
 
@@ -150,11 +150,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Great Team make the Dream Work<span class="text-muted"></span></h2>
+          <p class="lead">After all, great products are the result of great team work. Click here to check out our team.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid mx-auto" src="img/melab.png" alt="company logo">
         </div>
       </div>
 
@@ -178,10 +178,10 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="min.js"></script>
+    <script src="/js/min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="/js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/js.workaround.js"></script>
+    <script src="/js/workaround.js"></script>
   </body>
 </html>
