--- a/app/views/static/homepage.erb
+++ b/app/views/static/homepage.erb
@@ -26,19 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="static/homepage">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="https://www.facebook.com/mexlab/" target="_blank">Facebook</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
         </ul>
-        <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
       </div>
     </nav>
 
@@ -103,19 +100,19 @@
           <img class="rounded-circle" src="img/p2p.jpg" alt="Peer to Peer platform" width="140" height="140">
           <h2>P2P Platform</h2>
           <p>Pay Anyone, Anywhere, Anytime! Not only that, we are as secure and as safe as the bank because we ride on their ecosystem! </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="/ptwop" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="rounded-circle" src="img/blockchain.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Blockchain Technology</h2>
           <p>Blockchain technology is like the internet in that it has a built-in robustness. By storing blocks of information that are identical across its network, the blockchain cannot be controlled by any single entity nor have single point of failure.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="/blockchain" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="rounded-circle" src="img/crypto1.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Cryptocurrency</h2>
           <p>We use the mots cost effective and efficient way to move money accross border.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="/crypto" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -132,8 +129,8 @@
         <div class="col-md-5">
           <a href="/login"><img class="featurette-image img-fluid mx-auto" src="img/AB.png" alt="New Way of doing things"></a>
         </div>
-      </div>
-
+      
+      
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -145,7 +142,7 @@
           <img class="featurette-image img-fluid mx-auto" src="img/creditcard.jpg" alt="Withdrawal and payment options">
         </div>
       </div>
-
+      </div>
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -166,7 +163,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; MeLAB wholly own by Panda Mart Sdn Bhd. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
@@ -176,7 +173,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>"js/min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="/js/min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
