--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,8 +1,33 @@
 <html>
 	<head>
 		<title>MeLAB Design</title>
+		    <meta charset="utf-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    		<meta name="description" content="borderless currency">
+    		<!-- Bootstrap core CSS -->
+    		<link href="/css/min.css" rel="stylesheet">
+    		<!-- Custom styles for this template -->
+    		<link href="/css/home.css" rel="stylesheet">
 	</head>
+
+
+	
 	<body>
 		<%= yield %>
 	</body>
+
+
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script>"js/min.js"><\/script>')</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="/js/min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="/js/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/js/workaround.js"></script>
 </html>
