--- a/app/views/static/homepage.erb
+++ b/app/views/static/homepage.erb
@@ -1,23 +1,5 @@
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="borderless currency">
-    <meta name="author" content="fintech company">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>MeLAB Not Your Ordinary Wallet</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/css/min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="/css/home.css" rel="stylesheet">
-  </head>
   <body>
-
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +34,7 @@
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Extra Ordinary Wallet</h1>
               <p>There is a new way to doing things! Use MeLAB and make your life simple, happy and beautiful. Start Enjoying and Stop Worrying</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/login" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
@@ -168,17 +150,4 @@
 
     </div><!-- /.container -->
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>"js/min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="/js/min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="/js/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/js/workaround.js"></script>
   </body>
-</html>
