--- a/app/views/static/login.erb
+++ b/app/views/static/login.erb
@@ -51,6 +51,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/js/workaround.js"></script>
-
+</body>
+</html>
 
 
