--- a/app/views/static/userpage.erb
+++ b/app/views/static/userpage.erb
@@ -1,17 +1,5 @@
- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-    <title>Log in for AB Quora Clone</title>
-    <!-- Bootstrap core CSS -->
-    <link href="/css/min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
+
     <link href="/css/signin.css" rel="stylesheet">
-  </head>
 
 <body>    
 <center>
@@ -29,7 +17,7 @@
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
                 </form>
                 </div>
-                <a href="/questions"><h6> If you are awesome and highly intelligent, please press here and help other's species with your knowledge :-)</h6></a>
+                <a href="/questions/answer"><h6> If you are awesome and highly intelligent, please press here and help other's species with your knowledge :-)</h6></a>
                 <br>
                              <% if @submited %>
                              <%= @submited %>
@@ -52,7 +40,7 @@
       							    <th scope="row">1</th>
       							    <td><%= question.created_at %></td>
       							    <td><a href="/<%=quest_id(question)%>"><%= question.text %></a></td>
-      							    <td><a href="/question/<%question.id%>/destroy">Delete</td></a></td>
+      							    <td><form action="/<%=quest_id(question)%>/destroy" method="post"><button class="btn btn-lg btn-primary btn-block" type="submit">Delete</button></form></td>
     							      </tr>
     							      </tr>
   								      </tbody>
