--- a/app/views/static/userpage.erb
+++ b/app/views/static/userpage.erb
@@ -4,7 +4,7 @@
 <body>    
 <center>
         <h2> Welcome <%=current_user.name%></h2>
-        <a href='/questions'><button type="submit">Profile Page</button></a>
+        <a href='/userpage'><button type="submit">Profile Page</button></a>
         <br>
         <p><a href='/signout'><button type="submit">Sign Out</button></a></p>
      
