done ewallet and started teamwork page

--- a/app/views/static/signup.erb
+++ b/app/views/static/signup.erb
@@ -48,7 +48,7 @@
     <center>
                 <p class="change_link">  
                     Already a member ?
-                    <a href="/" class="to_register"> Go and log in </a>
+                    <a href="/login" class="to_register"> Go and log in </a>
                 </p>
     </center>
           
