--- a/app/views/questions/question_answer.erb
+++ b/app/views/questions/question_answer.erb
@@ -5,9 +5,32 @@
         <br>
         <p><a href='/signout'><button type="submit">Sign Out</button></a></p>
 <center>
-
-
 <%@view.each do |question| %>
+		<script>
+				function clickCounter() {if(typeof(Storage) !== "undefined") 
+				{ if (localStorage.clickcount) 
+					{ localStorage.clickcount = Number(localStorage.clickcount)+1;
+        			} 
+        			else { localStorage.clickcount = 1;}
+        				document.getElementById("result").innerHTML = "You have like the button " + localStorage.clickcount + " time(s).";} 
+        				else {document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+    				}
+    			}
+        </script>
+
+        		<script>
+				function clickCounters() {if(typeof(Storage) !== "undefined") 
+				{ if (localStorage.clickcounts) 
+					{ localStorage.clickcounts = Number(localStorage.clickcounts)+1;
+        			} 
+        			else { localStorage.clickcounts = 1;}
+        				document.getElementById("result2").innerHTML = "You have dislike the button " + localStorage.clickcounts + " time(s).";} 
+        				else {document.getElementById("result2").innerHTML = "Sorry, your browser does not support web storage...";
+    				}
+    			}
+                </script>
+
+
 <div class="card">
   	<div class="card-block">
     <h4 class="card-title">Question</h4>
@@ -17,8 +40,9 @@
     <p class="card-text"><%= answer.text %></p>
     <% end %>
     <a href="/<%=quest_id(question)%>/answer/new" class="card-link">Answer</a>
-	<a href="#" class="card-link">Like</a>
-    <a href="#" class="card-link">Dislike</a>
+
+    <p><button onclick="clickCounter()" type="button">Like!</button><button onclick="clickCounters()" type="button">Dislike!</button></p>
+	<div id="result"></div><div id="result2"></div>
     </div>
 </div>
 <%end%>
@@ -28,8 +52,6 @@
 <p id="passwordHelpBlock" class="form-text text-muted">
   Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
 </p>
-
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
