--- a/app/views/static/homepage.erb
+++ b/app/views/static/homepage.erb
@@ -34,7 +34,7 @@
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Extra Ordinary Wallet</h1>
               <p>There is a new way to doing things! Use MeLAB and make your life simple, happy and beautiful. Start Enjoying and Stop Worrying</p>
-              <p><a class="btn btn-lg btn-primary" href="/login" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
@@ -44,7 +44,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h1>We take care your finance</h1>
               <p>Cheapest Remittance, Cheapest Currency Exchange, Instant Transfer. All around the world. Only with MeLAB</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/login" role="button">Log in</a></p>
             </div>
           </div>
         </div>
@@ -133,8 +133,8 @@
           <p class="lead">After all, great products are the result of great team work. Click here to check out our team.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" src="img/melab.png" alt="company logo">
-        </div>
+          <a href="/teams"><img class="featurette-image img-fluid mx-auto" src="img/melab.png" alt="company logo">
+        </div></a>
       </div>
 
       <hr class="featurette-divider">
