--- a/app/views/questions/question_answered.erb
+++ b/app/views/questions/question_answered.erb
@@ -7,7 +7,7 @@
 <center>
 
 
-<form method="post" action=<%= create_answer_url(@question) %>>
+<form method="post" action="<%= create_answer_url(@question) %>">
 <label for="questions">Password</label>
 <input type="text" id="answer" name="answer" class="form-control" aria-describedby="passwordHelpBlock">
 <p id="passwordHelpBlock" class="form-text text-muted">
