--- a/app/views/static/homepage.erb
+++ b/app/views/static/homepage.erb
@@ -133,7 +133,7 @@
           <p class="lead">After all, great products are the result of great team work. Click here to check out our team.</p>
         </div>
         <div class="col-md-5">
-          <a href="/teams"><img class="featurette-image img-fluid mx-auto" src="img/melab.png" alt="company logo">
+          <a href="#"><img class="featurette-image img-fluid mx-auto" src="img/melab.png" alt="company logo">
         </div></a>
       </div>
 
