--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -11,7 +11,7 @@
                       <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>f
+            crossorigin="anonymous"></script>
             <script src="/js/application.js"></script>
 
 	</head>
@@ -28,4 +28,4 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
 
-</html> -->
+</html>
